feat : 활동 피드 50개 데이터 전송 변경, 폴더 저장 시 Redis 제외, 사용자 목록 검색 팔로워 정보 기능 추가, 백엔드 시스템 아키텍처 추가